# samba-kos

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  configure  copy.sh  cross-build-arm.sh  cross-build-qemu-new-skd.sh  cross-build-qemu.sh  cross-config.sh  kos_create_share_and_conf.py
kos/: CMakeLists.txt
kos/cmake/: tools.cmake
kos/cmake/kos/: executable.cmake
kos/cmake/linux/: executable.cmake
kos/einit/: CMakeLists.txt
kos/einit/src/: common.psl  init.yaml.in  security.psl
kos/entity/: CMakeLists.txt
kos/entity/einit/: CMakeLists.txt
kos/entity/env/: CMakeLists.txt
kos/entity/smbclient/: CMakeLists.txt  Smbclient.cfg  Smbclient.edl
kos/entity/smbd/: CMakeLists.txt  Smbd.cfg  Smbd.edl
kos/env/: CMakeLists.txt
kos/env/src/: env.c
kos/example/smbclient/: CMakeLists.txt  README.md
kos/example/smbd/: CMakeLists.txt  README.md  cross-build.sh
kos/libs/: CMakeLists.txt
kos/libs/CHARSET3/: CMakeLists.txt
kos/libs/MESSAGING/: CMakeLists.txt
kos/libs/MESSAGING-SEND/: CMakeLists.txt
kos/libs/addns/: CMakeLists.txt
kos/libs/ads/: CMakeLists.txt
kos/libs/asn1/: CMakeLists.txt
kos/libs/asn1util/: CMakeLists.txt
kos/libs/auth/: CMakeLists.txt
kos/libs/authkrb5/: CMakeLists.txt
kos/libs/bsd/: kosbsd.c
kos/libs/cli-cldap/: CMakeLists.txt
kos/libs/cli-ldap/: CMakeLists.txt
kos/libs/cli-ldap-common/: CMakeLists.txt
kos/libs/cli-nbt/: CMakeLists.txt
kos/libs/cli-smb-common/: CMakeLists.txt
kos/libs/cli-spoolss/: CMakeLists.txt
kos/libs/cliauth/: CMakeLists.txt
kos/libs/clidns/: CMakeLists.txt
kos/libs/cluster/: CMakeLists.txt
kos/libs/cmdline/: CMakeLists.txt
kos/libs/com-err/: CMakeLists.txt
kos/libs/common-auth/: CMakeLists.txt
kos/libs/dbwrap/: CMakeLists.txt
kos/libs/dcerpc/: CMakeLists.txt
kos/libs/dcerpc-binding/: CMakeLists.txt
kos/libs/dcerpc-pkt-auth/: CMakeLists.txt
kos/libs/dcerpc-samba/: CMakeLists.txt
kos/libs/dcerpc-server-core/: CMakeLists.txt
kos/libs/events/: CMakeLists.txt
kos/libs/flag-mapping/: CMakeLists.txt
kos/libs/genrand/: CMakeLists.txt
kos/libs/gensec/: CMakeLists.txt
kos/libs/gnutls/: CMakeLists.txt  kosgnutls.c  kosgnutls.h  kosgnutls_cipher.c  kosgnutls_errors.c  kosgnutls_hash.c  kosgnutls_hmac.c
kos/libs/gse/: CMakeLists.txt
kos/libs/gssapi/: CMakeLists.txt
kos/libs/hcrypto/: CMakeLists.txt
kos/libs/heimbase/: CMakeLists.txt
kos/libs/http/: CMakeLists.txt
kos/libs/hx509/: CMakeLists.txt
kos/libs/interfaces/: CMakeLists.txt
kos/libs/iov-buf/: CMakeLists.txt
kos/libs/krb5/: CMakeLists.txt
kos/libs/krb5samba/: CMakeLists.txt
kos/libs/ldb/: CMakeLists.txt
kos/libs/ldbsamba/: CMakeLists.txt
kos/libs/libcli-lsa3/: CMakeLists.txt
kos/libs/libcli-netlogon3/: CMakeLists.txt
kos/libs/libsmb/: CMakeLists.txt
kos/libs/messages-dgm/: CMakeLists.txt
kos/libs/messages-util/: CMakeLists.txt
kos/libs/msghdr/: CMakeLists.txt
kos/libs/msrpc3/: CMakeLists.txt
kos/libs/ndr/: CMakeLists.txt
kos/libs/ndr-krb5pac/: CMakeLists.txt
kos/libs/ndr-nbt/: CMakeLists.txt
kos/libs/ndr-samba/: CMakeLists.txt
kos/libs/ndr-samba4/: CMakeLists.txt
kos/libs/ndr-standard/: CMakeLists.txt
kos/libs/net-keytab/: CMakeLists.txt
kos/libs/netapi/: CMakeLists.txt
kos/libs/netif/: CMakeLists.txt
kos/libs/npa-tstream/: CMakeLists.txt
kos/libs/printing-migrate/: CMakeLists.txt
kos/libs/replace/: CMakeLists.txt
kos/libs/resolv/: CMakeLists.txt
kos/libs/roken/: CMakeLists.txt
kos/libs/samba-cluster-support/: CMakeLists.txt
kos/libs/samba-credentials/: CMakeLists.txt
kos/libs/samba-debug/: CMakeLists.txt
kos/libs/samba-errors/: CMakeLists.txt
kos/libs/samba-hostconfig/: CMakeLists.txt
kos/libs/samba-modules/: CMakeLists.txt
kos/libs/samba-passdb/: CMakeLists.txt
kos/libs/samba-security/: CMakeLists.txt
kos/libs/samba-sockets/: CMakeLists.txt
kos/libs/samba-util/: CMakeLists.txt
kos/libs/samba3-util/: CMakeLists.txt
kos/libs/samdb/: CMakeLists.txt
kos/libs/samdb-common/: CMakeLists.txt
kos/libs/secrets3/: CMakeLists.txt
kos/libs/server-id-db/: CMakeLists.txt
kos/libs/server-role/: CMakeLists.txt
kos/libs/smb-transport/: CMakeLists.txt
kos/libs/smbclient-raw/: CMakeLists.txt
kos/libs/smbconf/: CMakeLists.txt
kos/libs/smbd-base/: CMakeLists.txt
kos/libs/smbd-shim/: CMakeLists.txt
kos/libs/socket-blocking/: CMakeLists.txt
kos/libs/sys-rw/: CMakeLists.txt
kos/libs/talloc/: CMakeLists.txt
kos/libs/talloc-report-printf/: CMakeLists.txt
kos/libs/tdb/: CMakeLists.txt
kos/libs/tdb-wrap/: CMakeLists.txt
kos/libs/tevent/: CMakeLists.txt
kos/libs/tevent-util/: CMakeLists.txt
kos/libs/time-basic/: CMakeLists.txt
kos/libs/trusts-util/: CMakeLists.txt
kos/libs/util-reg/: CMakeLists.txt
kos/libs/util-setid/: CMakeLists.txt
kos/libs/util-tdb/: CMakeLists.txt
kos/libs/wbclient/: CMakeLists.txt
kos/libs/winbind-client/: CMakeLists.txt
kos/libs/wind/: CMakeLists.txt
kos/libs/xattr-tdb/: CMakeLists.txt
kos/libs_kos/: CMakeLists.txt
kos/libs_kos/CHARSET3/: CMakeLists.txt
kos/libs_kos/MESSAGING/: CMakeLists.txt
kos/libs_kos/MESSAGING-SEND/: CMakeLists.txt
kos/libs_kos/addns/: CMakeLists.txt
kos/libs_kos/ads/: CMakeLists.txt
kos/libs_kos/asn1/: CMakeLists.txt
kos/libs_kos/asn1util/: CMakeLists.txt
kos/libs_kos/auth/: CMakeLists.txt
kos/libs_kos/authkrb5/: CMakeLists.txt
kos/libs_kos/bsd/: CMakeLists.txt
kos/libs_kos/cli-cldap/: CMakeLists.txt
kos/libs_kos/cli-ldap/: CMakeLists.txt
kos/libs_kos/cli-ldap-common/: CMakeLists.txt
kos/libs_kos/cli-nbt/: CMakeLists.txt
kos/libs_kos/cli-smb-common/: CMakeLists.txt
kos/libs_kos/cli-spoolss/: CMakeLists.txt
kos/libs_kos/cliauth/: CMakeLists.txt
kos/libs_kos/clidns/: CMakeLists.txt
kos/libs_kos/cluster/: CMakeLists.txt
kos/libs_tmp/: CMakeLists.txt
kos/samba/: CMakeLists.txt  cmake_uninstall.cmake.in  cross-build.sh  install.sh  samba-config.cmake.in  smbclient-config.cmake.in  smbd-config.cmake.in  smblib-config.cmake.in
kos/smbd/: CMakeLists.txt
kos/smbdtest/: .gitignore  CMakeLists.txt  README.md
(+518 files in other folders)
