add_subdirectory(replace)
add_subdirectory(talloc)
add_subdirectory(time-basic)
add_subdirectory(socket-blocking)
add_subdirectory(iov-buf)
add_subdirectory(samba-debug)
add_subdirectory(tevent)
add_subdirectory(genrand)
add_subdirectory(sys-rw)
add_subdirectory(util-setid)
add_subdirectory(roken)
add_subdirectory(samba-util)
add_subdirectory(com-err)