add_subdirectory(replace)
add_subdirectory(talloc)
add_subdirectory(time-basic)
add_subdirectory(socket-blocking)
add_subdirectory(iov-buf)
add_subdirectory(samba-debug)
add_subdirectory(tevent)
add_subdirectory(genrand)
add_subdirectory(sys-rw)
add_subdirectory(util-setid)
add_subdirectory(roken)
add_subdirectory(samba-util)
add_subdirectory(com-err)
add_subdirectory(ndr)
add_subdirectory(asn1)
add_subdirectory(tdb)
add_subdirectory(samba-security)
add_subdirectory(hcrypto)
add_subdirectory(wind)
add_subdirectory(ndr-nbt)
add_subdirectory(heimbase)
add_subdirectory(hx509)
add_subdirectory(tevent-util)
add_subdirectory(util-tdb)
add_subdirectory(tdb-wrap)
add_subdirectory(server-role)