add_subdirectory(replace)
add_subdirectory(talloc)
add_subdirectory(time-basic)
add_subdirectory(socket-blocking)
add_subdirectory(iov-buf)
add_subdirectory(samba-debug)
add_subdirectory(tevent)
add_subdirectory(genrand)
add_subdirectory(sys-rw)
add_subdirectory(util-setid)
add_subdirectory(roken)
add_subdirectory(samba-util)
add_subdirectory(com-err)
add_subdirectory(ndr)
add_subdirectory(asn1)
add_subdirectory(tdb)
add_subdirectory(samba-security)
add_subdirectory(hcrypto)
add_subdirectory(wind)
add_subdirectory(ndr-nbt)
add_subdirectory(heimbase)
add_subdirectory(hx509)
add_subdirectory(tevent-util)
add_subdirectory(util-tdb)
add_subdirectory(tdb-wrap)
add_subdirectory(server-role)
add_subdirectory(ndr-standard)
add_subdirectory(krb5)
add_subdirectory(asn1util)
add_subdirectory(samba-hostconfig)
add_subdirectory(dbwrap)
add_subdirectory(gssapi)
add_subdirectory(msghdr)
add_subdirectory(interfaces)
add_subdirectory(events)
add_subdirectory(ndr-samba)
add_subdirectory(ldb)
add_subdirectory(krb5samba)
add_subdirectory(messages-dgm)
add_subdirectory(server-id-db)
add_subdirectory(messages-util)
add_subdirectory(cluster)
add_subdirectory(samba-sockets)
add_subdirectory(MESSAGING-SEND)
add_subdirectory(cli-ldap-common)
add_subdirectory(cliauth)
add_subdirectory(flag-mapping)
add_subdirectory(common-auth)
add_subdirectory(samdb-common)
add_subdirectory(ldbsamba)
add_subdirectory(authkrb5)
add_subdirectory(samba-credentials)
add_subdirectory(winbind-client)
