set(TARGET_NAME asn1)

set(TARGET_SRC
        ${SMB_SRC_ROOT}/source4/heimdal/lib/asn1/der_get.c
        ${SMB_SRC_ROOT}/source4/heimdal/lib/asn1/der_put.c
        ${SMB_SRC_ROOT}/source4/heimdal/lib/asn1/der_free.c
        ${SMB_SRC_ROOT}/source4/heimdal/lib/asn1/der_format.c
        ${SMB_SRC_ROOT}/source4/heimdal/lib/asn1/der_length.c
        ${SMB_SRC_ROOT}/source4/heimdal/lib/asn1/der_copy.c
        ${SMB_SRC_ROOT}/source4/heimdal/lib/asn1/der_cmp.c
        ${SMB_SRC_ROOT}/source4/heimdal/lib/asn1/extra.c
        ${SMB_SRC_ROOT}/source4/heimdal/lib/asn1/timegm.c
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/asn1/asn1_err.c
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/asn1/asn1_pkinit_asn1.c
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/asn1/asn1_cms_asn1.c
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal_build/asn1.objlist.empty.c
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/asn1/asn1_rfc2459_asn1.c
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/asn1/asn1_krb5_asn1.c
)

add_library(
        ${TARGET_NAME}
        STATIC
        ${TARGET_SRC}
)

target_include_directories(
        ${TARGET_NAME}
        PRIVATE
        ${SMB_SRC_ROOT}
        ${SMB_SRC_ROOT}/lib
        ${SMB_SRC_ROOT}/lib/replace
        ${SMB_SRC_ROOT}/lib/talloc
        ${SMB_SRC_ROOT}/lib/tevent
        ${SMB_SRC_ROOT}/include
        ${SMB_SRC_ROOT}/include/public
        ${SMB_SRC_ROOT}/source4
        ${SMB_SRC_ROOT}/source4/lib
        ${SMB_SRC_ROOT}/source4/include
        ${SMB_SRC_ROOT}/source4/heimdal_build
        ${SMB_SRC_ROOT}/source4/heimdal_build/include
        ${SMB_SRC_ROOT}/source4/heimdal/lib/roken
        ${SMB_SRC_ROOT}/source4/heimdal/lib/com_err
        ${SMB_SRC_ROOT}/source4/heimdal/lib/asn1
        ${SMB_SRC_ROOT}/source4/heimdal/include
        ${SMB_SRC_ROOT}/third_party/gpfs
        ${SMB_SRC_ROOT}/bin/default
        ${SMB_SRC_ROOT}/bin/default/include
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/asn1/
)

target_compile_definitions(
        ${TARGET_NAME}
        PRIVATE
        _SAMBA_BUILD_=4
        HAVE_CONFIG_H=1
        _GNU_SOURCE=1
        _XOPEN_SOURCE_EXTENDED=1
        HAVE_CONFIG_H=1
        __STDC_WANT_LIB_EXT1__=1
        _REENTRANT
)

target_compile_options(
        ${TARGET_NAME}
        PRIVATE
        -MMD
        -fPIC
        -fstack-protector-strong
        -fstack-clash-protection
)
